Introduced `UdpTracker` for `udp` announce URLs
* Renamed `SingleTracker` into `UrlTracker`
* Modified `MultiTracker` to be composed of multiple `Tracker` objects instead of just multiple URL's. This is to ease abstraction over the protocol used for the announces.
* Added a currently unimplemented `UdpTracker` intended for trackers that use the UDP Tracker Protocol.